# memtree

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  evaluate.py  langgraph.json  main.py  pyproject.toml
src/: agent.py
src/eval/: loaders.py  loaders_inspect.py  run.py
src/memtree/: node.py  store.py
tests/: test_memtree.py
